--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,25 @@
     <title>ZIANOO</title>   
   </head>
   <body>
-    <h1>Montserrat</h1>
+    <header>
+      <div class="contaoner">
+        <div class="menu">
+          <div class="menu-logo">
+            <p>zianoo<sup>TM</sup></p>
+          </div>
+          <ul class="menu-navigation">
+            <li class="menu-navigation__item">
+              <a href="#" class="menu-navigation__link"><div id="bag"></div></a>
+            </li>
+            <li class="menu-navigation__item">
+              <a href="#" class="menu-navigation__link"></a>
+            </li>
+            <li class="menu-navigation__item">
+              <a href="#" class="menu-navigation__link"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
