--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             </li>
             <li class="menu-navigation__item">
               <a href="#" class="menu-navigation__link"
-                ><i data-feather="shopping-bag"></i
+                ><i data-feather="shopping-cart"></i
               ></a>
             </li>
             <li class="menu-navigation__item">
@@ -39,24 +39,24 @@
       <div class="container">
         <div class="main-page">
           <div class="page-left">
-            <nav class="main-menu">
-              <ul class="main-menu__nav">
-                <li class="main-menu__item">
-                  <a href="" class="main-menu__link">Shoes</a>
+            <nav class="left-menu">
+              <ul class="left-menu__nav">
+                <li class="left-menu__item">
+                  <a href="" class="left-menu__link">Shoes</a>
                 </li>
-                <li class="main-menu__item">
-                  <a href="" class="main-menu__link">Bags</a>
+                <li class="left-menu__item">
+                  <a href="" class="left-menu__link">Bags</a>
                 </li>
-                <li class="main-menu__item">
-                  <a href="" class="main-menu__link">Accessories</a>
-                  <div class="main-menu__new">New</div>
+                <li class="left-menu__item new">
+                  <a href="" class="left-menu__link">Accessories</a>
+                  <div class="left-menu__new"><span class="new-text">New</span></div>
                 </li>
-                <li class="main-menu__item">
-                  <a href="" class="main-menu__link">Support</a>
+                <li class="left-menu__item">
+                  <a href="" class="left-menu__link">Support</a>
                 </li>
               </ul>
             </nav>
-            <div class="main-page__text">
+            <div class="left-page__text">
               <div class="text-left">
                 Extra<br>Care
               </div>
@@ -64,13 +64,28 @@
                 Foot<br>Tech
               </div>
             </div>
-            <div class="main-page__learnmore">
-              <span class="border"></span>
+            <div class="left-page__learnmore">
+              <span class="line"></span>
               <div class="learnmore__text">learn more</div>
             </div>
+            <div class="left-page__scroll">
+              <span>scroll down</span>
+            </div>
           </div>
-          <div class="main-center">
-            
+          <div class="page-center">
+            <article class="page-center__content">
+              <p>The best looks; Top Comfort</p>
+              <h1>Comfy Maxe<sup>®</sup></h1>
+              <p>Our shoes fuse together an insole that cushions every move, laces that 
+                you'll never need to tie again, and an odor-fighting copper thread lining.
+              </p>
+              <div class="content__buttons">
+                <button class="buttons__add"><i data-feather="shopping-bag"></i
+                  >Add To Cart</button>
+                <button class="buttons__watch"><i data-feather="play-circle"></i
+                  >Watch Intro</button>
+              </div>
+            </article>
           </div>
         </div>
       </div>
