--- a/src/index.html
+++ b/src/index.html
@@ -66,18 +66,18 @@
             </div>
             <div class="left-page__learnmore">
               <span class="line"></span>
-              <div class="learnmore__text">learn more</div>
+              <div class="learnmore__text"><a href="#" class="text__link">learn more</a></div>
             </div>
             <div class="left-page__scroll">
-              <span>scroll down</span>
+              <span>Scroll down</span>
             </div>
           </div>
           <div class="page-center">
             <article class="page-center__content">
               <p>The best looks; Top Comfort</p>
               <h1>Comfy Maxe<sup>®</sup></h1>
-              <p>Our shoes fuse together an insole that cushions every move, laces that 
-                you'll never need to tie again, and an odor-fighting copper thread lining.
+              <p>Our shoes fuse together an insole that cushions every<br> move, laces that 
+                you'll never need to tie again, and an<br> odor-fighting copper thread lining.
               </p>
               <div class="content__buttons">
                 <button class="buttons__add"><i data-feather="shopping-bag"></i
@@ -92,7 +92,7 @@
     </main>
 
     <script>
-      feather.replace();
+      
     </script>
   </body>
 </html>
