--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/feather-icons"></script>
 
-    <script src="./js/feather.min.js"></script>
     <title>ZIANOO</title>
   </head>
   <body>
@@ -49,7 +49,9 @@
                 </li>
                 <li class="left-menu__item new">
                   <a href="" class="left-menu__link">Accessories</a>
-                  <div class="left-menu__new"><span class="new-text">New</span></div>
+                  <div class="left-menu__new">
+                    <span class="new-text">New</span>
+                  </div>
                 </li>
                 <li class="left-menu__item">
                   <a href="" class="left-menu__link">Support</a>
@@ -57,42 +59,97 @@
               </ul>
             </nav>
             <div class="left-page__text">
-              <div class="text-left">
-                Extra<br>Care
-              </div>
-              <div class="text-right">
-                Foot<br>Tech
-              </div>
+              <div class="text-left">Extra<br />Care</div>
+              <div class="text-right">Foot<br />Tech</div>
             </div>
             <div class="left-page__learnmore">
               <span class="line"></span>
-              <div class="learnmore__text"><a href="#" class="text__link">learn more</a></div>
+              <div class="learnmore__text">
+                <a href="#" class="text__link">learn more</a>
+              </div>
             </div>
             <div class="left-page__scroll">
               <span>Scroll down</span>
             </div>
           </div>
           <div class="page-center">
-            <article class="page-center__content">
-              <p>The best looks; Top Comfort</p>
-              <h1>Comfy Maxe<sup>®</sup></h1>
-              <p>Our shoes fuse together an insole that cushions every<br> move, laces that 
-                you'll never need to tie again, and an<br> odor-fighting copper thread lining.
-              </p>
-              <div class="content__buttons">
-                <button class="buttons__add"><i data-feather="shopping-bag"></i
-                  >Add To Cart</button>
-                <button class="buttons__watch"><i data-feather="play-circle"></i
-                  >Watch Intro</button>
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <article class="page-center__content">
+                    <p>The best looks; Top Comfort</p>
+                    <h1>Comfy Maxe<sup>®</sup></h1>
+                    <p>
+                      Our shoes fuse together an insole that cushions every<br />
+                      move, laces that you'll never need to tie again, and an<br />
+                      odor-fighting copper thread lining.
+                    </p>
+                    <div class="content__buttons">
+                      <button class="buttons__add">
+                        <i data-feather="shopping-bag"></i>Add To Cart
+                      </button>
+                      <button class="buttons__watch">
+                        <i data-feather="play-circle"></i>Watch Intro
+                      </button>
+                    </div>
+                  </article>
+                  <div class="page-center__image">
+                    <span class="image__bgtext">94</span>
+                    <img src="../src/assets/img/image 2.png" alt="boots" class="image" />
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  Lorem ipsum, dolor sit amet consectetur<br />
+                  adipisicing elit. Architecto quasi beatae ipsam,<br />
+                  doloribus corrupti delectus est consequuntur adipisci
+                  temporibus odio harum tempore, natus, veniam illo minima
+                  quisquam ipsum facilis? Voluptatem. Slisdaasd<br />de 2
+                </div>
+                <div class="swiper-slide">
+                  Lorem ipsum, dolor sit amet consectetur<br />
+                  adipisicing elit. Architecto quasi beatae ipsam,<br />
+                  doloribus corrupti delectus est consequuntur adipisci
+                  temporibus odio harum tempore, natus, veniam illo minima
+                  quisquam ipsum facilis? Voluptatem. Slisdaasd<br />de 2
+                </div>
               </div>
-            </article>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+          <div class="page-right">
+            <div class="page-right__about">
+              <ul class="about">
+                <li class="about-item">
+                  <a href="#" class="about-item__link">team </a>
+                </li>
+                <li class="about-item">
+                  <a href="#" class="about-item__link">packaging</a>
+                </li>
+                <li class="about-item">
+                  <a href="#" class="about-item__link">manufacturing</a>
+                </li>
+              </ul>
+            </div>
+            <div class="page-right__social">
+              <ul class="social">
+                <li class="social-item">
+                  <a href="#" class="social-item__link">in </a>
+                </li>
+                <li class="social-item">
+                  <a href="#" class="social-item__link">tw</a>
+                </li>
+                <li class="social-item">
+                  <a href="#" class="social-item__link">fb</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </main>
 
     <script>
-      
+      feather.replace();
     </script>
   </body>
 </html>
